<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="24dp">


                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/profilephoto"
                    android:layout_marginEnd="15dp"
                    tools:ignore="ContentDescription,HardcodedText" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ivan"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="TODO"
                    android:src="@drawable/profilebutton"
                    android:layout_marginEnd="16dp"
                    tools:ignore="ContentDescription,HardcodedText" />

                <ImageView
                    android:id="@+id/icon2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/helpbutton"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ivan2"
                android:textSize="16sp"
                android:textStyle="normal"
                android:textColor="#000000"
                android:layout_marginBottom="0dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textSize="14sp"
                android:textColor="#000000"
                android:layout_marginBottom="24dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/people1"
                    android:contentDescription="@string/firstimage" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Main"
                    android:text="@string/click"
                    android:textColor="#3E2723"
                    tools:ignore="DuplicateSpeakableTextCheck,VisualLintButtonSize" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/people2"
                    android:contentDescription="@string/secondimage" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Main"
                    android:text="@string/click2"
                    android:textColor="#3E2723"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/people3"
                    android:contentDescription="@string/thirdimage" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Main"
                    android:text="@string/click3"
                    android:textColor="#3E2723"
                    tools:ignore="VisualLintButtonSize" />
            </LinearLayout>
        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:baselineAligned="false"
                android:text="@string/sell"
                android:textColor="#0D47A1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                tools:ignore="DisableBaselineAlignment">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:contentDescription="@string/thirtyimage"
                        android:scaleType="centerCrop"
                        android:src="@drawable/people4"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/people5"
                        android:contentDescription="@string/fiftyimage" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:contentDescription="@string/siximage"
                        android:scaleType="centerCrop"
                        android:src="@drawable/people6"
                        tools:ignore="ImageContrastCheck" />
                </LinearLayout>
            </LinearLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_moscow"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:paddingStart="8dp"
                    android:text="Москва"
                    android:textSize="16sp"
                    app:buttonTint="@color/radio_button_tint_color"
                    tools:ignore="HardcodedText,RtlSymmetry,TextSizeCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_spb"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:checked="true"
                    android:paddingStart="8dp"
                    android:text="@string/piter"
                    android:textSize="16sp"
                    app:buttonTint="@color/radio_button_tint_color"
                    tools:ignore="RtlSymmetry,TextSizeCheck,VisualLintButtonSize" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_novosibirsk"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:paddingStart="8dp"
                    android:text="Новосибирск"
                    android:textSize="16sp"
                    app:buttonTint="@color/radio_button_tint_color"
                    tools:ignore="HardcodedText,RtlSymmetry,TextSizeCheck,TouchTargetSizeCheck,VisualLintButtonSize" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_vladivostok"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="8dp"
                    android:text="@string/vladivostok"
                    android:textSize="16sp"
                    app:buttonTint="@color/radio_button_tint_color"
                    tools:ignore="RtlSymmetry,TextSizeCheck,VisualLintButtonSize" />
            </RadioGroup>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bgphoto"
                    tools:ignore="ImageContrastCheck" />
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/moreinf"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginBottom="24dp" />
        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>