<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">
                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec1"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/robert"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec2"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/albert"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">
                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec3"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/kathryn"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">
                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec4"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/courtney"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">
                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec5"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/eleanor"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">
                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec6"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/marvin"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">
                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec7"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/darlene"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@color/Main">
                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rec8"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:padding="26dp"
                    android:text="@string/bessie"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>